# orchard

./: .gitattributes  .gitignore  hello.py  pyproject.toml
data/: biorxiv_complete_dataset.csv  broadTopics.json  specificTopics.json
notebooks/: 02-embed-bioRxiv.ipynb  03-nomic-exploration.ipynb  04-create-db.ipynb  05-normalize-xy.ipynb  06-create-db-index.ipynb  07-create-topic-dict.ipynb  scrape-bioRxiv.ipynb
