[project]
name = "orchard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "voyageai>=0.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
